# HW_EX_23_2

./: .env.sample  dogs.json  groups.json  pyproject.toml
config/: settings.py  urls.py
dogs/: admin.py  forms.py  models.py  services.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_dog_view_counter.py  0003_parent.py  0004_dog_owner.py  0005_alter_dog_options_dog_description.py
dogs/templates/dogs/: base.html  dog_confirm_delete.html  dog_detail.html  dog_form.html  dog_list.html
dogs/templates/dogs/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
